# easyOsuReffer

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: banchobot_parser.rs  commands.rs  irc_handler.rs  lib.rs  main.rs  migrations.rs  osu_api.rs  types.rs
src/assets/css/: main.css
src/components/: ConnectOsuBtn.vue  Mod.vue
src/components/Drawer/: SelectMap.vue
src/components/Mappool/: BeatmapPanel.vue  CreateForm.vue  CreateModal.vue  ImportSheetModal.vue  Item.vue  List.vue  MappoolFormModal.vue
src/components/UI/: AppModal.vue  Avatar.vue  Badge.vue  BottomSheet.vue  Btn.vue  Card.vue  CloseButton.vue  ConfirmDialog.vue  Field.vue  Icon.vue  IconBtn.vue  Input.vue  Loading.vue  LoadingText.vue  Modal.vue  Select.vue  SlideOver.vue  Spinner.vue  StatusDot.vue  (+4 more)
src/composables/: useAndroidBackButton.ts  useCategoryTone.ts  useConfirm.ts  useDialog.ts  useIrcRooms.ts  useMappools.ts  useMatchCountdown.ts  useModalLayer.ts  useTimerCountdown.ts  useUserAvatar.ts
src/pages/: ChatView.vue  HomeView.vue  LoginView.vue  MappoolDetail.vue  MappoolsView.vue
src/services/: banchoBotParser.ts  database.ts  sheetImport.ts
src/stores/: global.ts  lobbyStore.ts
src/types/: auth.ts  chat.ts  general.ts  index.d.ts  index.ts  lobby.ts  mappool.ts
(+25 files in other folders)
